[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scripts/Laser.gd" type="Script" id=1]
[ext_resource path="res://assets/laser/LAZERYENI5.png" type="Texture" id=2]
[ext_resource path="res://assets/laser/LAZERYENI2.png" type="Texture" id=3]
[ext_resource path="res://assets/laser/LAZERYENI3.png" type="Texture" id=4]
[ext_resource path="res://assets/laser/LAZERYENI4.png" type="Texture" id=5]
[ext_resource path="res://assets/laser/LAZERYENI1.png" type="Texture" id=6]
[ext_resource path="res://assets/laser/LAZERYENI7.png" type="Texture" id=7]
[ext_resource path="res://assets/laser/LAZERYENI9.png" type="Texture" id=8]
[ext_resource path="res://assets/laser/LAZERYENI10.png" type="Texture" id=9]
[ext_resource path="res://assets/laser/LAZERYENI8.png" type="Texture" id=10]
[ext_resource path="res://assets/laser/LAZERYENI6.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 11 ) ],
"loop": false,
"name": "turnoff",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "turnon",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.99977, 64 )

[node name="Laser" type="Area2D"]
rotation = 1.5708
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
activation_time = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
